--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,4 +9,4 @@ logging.level.root=WARN
 #wiremock.rootDirectory=./target/test-classes/race-start-time-update
 #wiremock.rootDirectory=./target/test-classes/race-scratch-runners
 #wiremock.rootDirectory=./target/test-classes/race-re-instate-runners
-wiremock.rootDirectory=./target/test-classes/
+wiremock.rootDirectory=wiremock-server/target/test-classes/
