--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,10 @@ spring.freemarker.checkTemplateLocation=false
 logging.level.root=WARN
 
 #this is overridden by env var in docker-compose.yml
-wiremock.rootDirectory=./target/test-classes/
+#wiremock.rootDirectory=./target/test-classes/
+wiremock.rootDirectory=./test/resources/
+
+
 #wiremock.rootDirectory=./target/test-classes/empty-snapshot
 #wiremock.rootDirectory=./target/test-classes/race-abandoned
 #wiremock.rootDirectory=./target/test-classes/race-start-time-update
